index.css
/* Source Edits-------------------------------------------------------------------- */
body {
    margin: 0;
    background-color: #beccd8;
}

div {
    vertical-align: top;
}

p {
    font-size: 20px;
	font-family: "Arial";
}

/* Custom Classes---------------------------------------------------------------- */
.topper {
    padding: 0 10%;
    background-color: #8b9aa8/* #5f6972 */;
    word-spacing: -20px;
    font-family: 'Poor Story', cursive;
}

.subtitle {
    letter-spacing: 8px;
    word-spacing: normal;
    font-size: 18px;
    margin-top: -32px;
    color: #505050;
}

.thumb {
    border: 1px solid #ddd;
    border-radius: 4px;
    padding: 5px;
    width: 150px;
}

.thumb:hover {
    box-shadow: 0 0 2px 1px #008cba80;
}

.container {
	padding: 6px;
	text-align: center;
}

.parallax {
	height: 100%;
	width: 80;
	
	background-attachment: fixed;
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
	text-align: center;
}
.parcont { /* parallax container */
	display: inline-block;
	padding: 48px;
	background: rgb(224, 224, 224, 0.9);
	
	position: relative;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%); 
	visibility: visible;
}
	
/* Buttons----------------------------------------------------------------------------- */
.btn {
    border: none;
    color: white;
    padding: 14px 28px;
    cursor: pointer;
    font-size: 18px;
    border-radius: 10px;
}

.info {background-color: #2196F3;}
.info:hover {background: #0b7dda;}

/* Website Frame------------------------------------------------------------------ */
ul.sidenav {
    display: block;
    list-style-type: none;
    margin: 0;
    padding: 0;
    width: 20%;
    background-color: #8b9aa8;
    position: fixed;
    height: 100%;
	overflow: hidden;

    box-shadow: 0px 0px 16px;

    font-family: 'Poor Story', cursive;
    font-size: 24px;
    letter-spacing: 4px;
}

ul.sidenav li a {
    display: block;
    color: #000;
    padding: 8px 16px;
    text-decoration: none;
}
 
ul.sidenav li a.active {
    background-color: #5f6972;
    color: white;
}

ul.sidenav li a:hover:not(.active) {
    background-color: #555;
    color: white;
}

div.content {
    display: inline-block;
    height: 1000px;
	margin-left: 20%;
	width: 80%;
    font-family:'Poor Story', cursive;
	/* overflow-y: auto; */
}

/* Line Split--------------------------------------------------------------------------- */
hr {
    border: 2px solid #ffffff;
	height: 0;	
	width: 80%;
}

/* Tablet Size---------------------------------------------------------------------------- */
@media screen and (max-width: 768px) {
	html {
		overflow-x: hidden;
	}
    ul.sidenav {
        width: 100%;
        height: auto;
        position: relative;

    }
    ul.sidenav li a {
        float: left;
        padding: 15px;
    }
    .twitter-follow-button {
        float: left;
        padding: 15px;
    }
    div.content {
		margin-left: 0;
		width: 100%;
	}
	.parallax {
        background-attachment: scroll;
    }
}

/* Phone Size--------------------------------------------------------------------------------- */
@media screen and (max-width: 414px) {
	html {
		overflow-x: hidden;
	}
    ul.sidenav li a {
        text-align: center;
        float: none;
    }
	ul.sidenav {
		font-size: 14px;
		letter-spacing: 4px;
	}
	.twitter-follow-button {
        float: none;
    }
	.subtitle {
		font-size: 14px;
		margin-top: -24px;
	}
	.topper {
    word-spacing: -14px;
	}
	div.content {
		margin-left: 0;
		width: 100%;
	}
}

